--- a/404.html
+++ b/404.html
@@ -20,6 +20,6 @@ layout: page
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>ページが見つかりませんでした</strong></p>
+  <p>Homeを押してトップページに戻ってね。</p>
 </div>
